--- a/package.json
+++ b/package.json
@@ -10,12 +10,24 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fortawesome/fontawesome-svg-core": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/material": "^5.14.8",
+    "@mui/styled-engine-sc": "^5.14.8",
+    "@mui/x-date-pickers": "^6.13.0",
+    "antd": "^5.9.0",
     "bootstrap": "^5.3.1",
+    "date-fns": "^2.30.0",
+    "font-awesome": "^4.7.0",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
-    "react-router-bootstrap": "^0.26.2"
+    "react-router-bootstrap": "^0.26.2",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
