--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-dom": "^18.2.0",
     "react-router": "^6.15.0",
     "react-router-bootstrap": "^0.26.2",
+    "react-router-dom": "^6.15.0",
     "styled-components": "^5.3.11"
   },
   "devDependencies": {
