--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^5.14.8",
     "@mui/styled-engine-sc": "^5.14.8",
     "@mui/x-date-pickers": "^6.13.0",
+    "@vis.gl/react-google-maps": "^0.5.4",
     "antd": "^5.9.0",
     "bootstrap": "^5.3.1",
     "date-fns": "^2.30.0",
